<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cryptocurrency quotes</string>
    <string name="rank_string">Rank:\u0020</string>
    <string name="crypto_currency_name_string">Name:\u0020</string>
    <string name="market_cap_string">Market Cap:\u0020</string>
    <string name="price_string">Price:\u0020</string>
    <string name="volume_24h_string">Volume (24h):\u0020</string>
    <string name="circulating_supply_string">Circulating Supply:\u0020</string>
    <string name="percentage_change_24h_string">% (24h):\u0020</string>
    <string name="date_added_string">Date Added:\u0020</string>
    <string name="max_supply_string">Maximum Supply:\u0020</string>
    <string name="search_string">Search</string>
    <string name="sort_by_string">Sort by:</string>
    <string name="market_cap">market_cap</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="volume_24h">volume_24h</string>
    <string name="circulating_supply">circulating_supply</string>
    <string name="percent_change_24h">percent_change_24h</string>

    <string name="market_cap_title">Market Cap</string>
    <string name="name_title">Name</string>
    <string name="price_title">Price</string>
    <string name="volume_24h_title">Volume (24h)</string>
    <string name="circulating_supply_title">Circulating Supply</string>
    <string name="percent_change_24h_title">Percent Change (24h)</string>

    <string name="raise_string">Raise</string>
    <string name="total_supply_string">Total Supply:\u0020</string>
    <string name="percentage_change_1h_string">% (1h):\u0020</string>
    <string name="percentage_change_7d_string">% (7d):\u0020</string>
    <string name="price_conversion_string">Price Conversion</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="rub">RUB</string>
    <string name="please_enter_amount_hint_string">Please, enter amount:</string>
    <string name="cost_string">Cost:\u0020</string>
    <string name="convert_string">Convert</string>
    <string name="sort_dir_content_description_string">Sort Dir</string>
    <string name="desc_string">desc</string>
    <string name="asc_string">asc</string>
    <string name="info_string">Info</string>
    <string name="conversion_string">Conversion</string>

    <string-array name="sort_by_array">
        <item>@string/market_cap_title</item>
        <item>@string/name_title</item>
        <item>@string/price_title</item>
        <item>@string/volume_24h_title</item>
        <item>@string/circulating_supply_title</item>
        <item>@string/percent_change_24h_title</item>
    </string-array>

    <string-array name="currency_array">
        <item>@string/usd</item>
        <item>@string/eur</item>
        <item>@string/gbp</item>
        <item>@string/rub</item>
    </string-array>

    <string-array name="tab_array">
        <item>@string/info_string</item>
        <item>@string/conversion_string</item>
    </string-array>
</resources>
