<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crypto_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.fragments.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_info_padding">

        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/name_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crypto_currency_name_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/name_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/date_added_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/date_added_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_added_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/date_added_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/date_added_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/max_supply_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/max_supply_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_supply_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/max_supply_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/max_supply_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/total_supply_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/total_supply_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_supply_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/total_supply_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/total_supply_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/price_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/price_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/volume_24h_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/volume_24h_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_24h_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/volume_24h_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/volume_24h_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/percentage_change_1h_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/percentage_change_1h_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage_change_1h_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/percentage_change_1h_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/percentage_change_1h_title_text_view"
                style="@style/InfoTextStyle" />

            <ImageView
                android:id="@+id/percentage_change_1h_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/percentage_change_1h_text_view"
                android:contentDescription="@string/raise_string"
                android:layout_marginStart="@dimen/raise_image_view_margin_start" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/percentage_change_24h_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/percentage_change_24h_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage_change_24h_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/percentage_change_24h_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/percentage_change_24h_title_text_view"
                style="@style/InfoTextStyle" />

            <ImageView
                android:id="@+id/percentage_change_24h_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/percentage_change_24h_text_view"
                android:contentDescription="@string/raise_string"
                android:layout_marginStart="@dimen/raise_image_view_margin_start" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/percentage_change_7d_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/percentage_change_7d_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage_change_7d_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/percentage_change_7d_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/percentage_change_7d_title_text_view"
                style="@style/InfoTextStyle" />

            <ImageView
                android:id="@+id/percentage_change_7d_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/percentage_change_7d_text_view"
                android:contentDescription="@string/raise_string"
                android:layout_marginStart="@dimen/raise_image_view_margin_start" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/market_cap_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_margin_bottom_default">

            <TextView
                android:id="@+id/market_cap_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_cap_string"
                style="@style/InfoTextStyle" />

            <TextView
                android:id="@+id/market_cap_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/market_cap_title_text_view"
                style="@style/InfoTextStyle" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>